# cpp-learning

./: .clang-format-old  .clang-tidy  .clangd  .clangd-learning  .clangd-strict  .editorconfig  .gitignore  CppProperties.json  README.md  checks.json  compile_flags.txt  cpp-learning.code-workspace  regenerate_std_module.sh
.continue/rules/: context-rule.yaml
.vscode-settings-backup/: c_cpp_properties.json  settings.json
bookwork/: output_operations  output_operations.cpp
bookwork/bcpp-game/chapter1/: 1  1.cpp  exercises  exercises.cpp  expensive_calculator  expensive_calculator.cpp  game_over2  game_over3  game_over3.cpp  game_stats  game_stats.cpp  game_stats2  game_stats2.cpp  game_stats3  game_stats3.cpp  game_stats3.cppcheck  game_stats3_debug  lost_fortune  scratchpad  scratchpad.cpp
bookwork/bcpp-game/chapter10/: abstract_creature  overriding_boss  polymorphic_bad_guy  simple_boss  simple_boss2  simple_boss2.cpp
bookwork/bcpp-game/chapter2/: designers_network  die_roller  discussion_questions  exercises  exercises.cpp  finicky_counter  finicky_counter.cpp  guess_my_number  guess_my_number.cpp  menu_chooser  menu_chooser.cpp  play_again  score_rater  score_rater.cpp  score_rater2  score_rater3  score_rater3.cpp  scratchpad.cpp
bookwork/bcpp-game/chapter3/: counter  counter.cpp  discussion  exercise1  heroes_inventory  heroes_inventory.cpp  string_tester  tic-tac-toe_board  tic-tac-toe_board.cpp  word_jumble
bookwork/bcpp-game/chapter4/: exercise1  exercise1.cpp  hangman  heros_inventory  heros_inventory3  high_scores  high_scores.cpp
bookwork/bcpp-game/chapter5/: exercise2  exercise3  give_me_a_number  give_me_a_number.cpp  global_reach  instructions  instructions.cpp  mad_lib  mad_lib.cpp  scoping  scoping.cpp  taking_damage  taking_damage.cpp  triple  yes_or_no
bookwork/bcpp-game/chapter6/: inventory_displayer  inventory_displayer.cpp  inventory_referencer  inventory_referencer.cpp  referencing  swap  swap.cpp  tic-tac-toe  tic-tac-toe.cpp
bookwork/bcpp-game/chapter7/: array_passer  array_passer.cpp  discussion_questions  exercise1  (+9 more)
bookwork/mcpppc/: README.md
bookwork/ppp3/: deep_dive.md
concurrency/krishna-gupta-exercises/: README.md
guided-learning/concurrency/: module_6_async_future.cpp
port_code/: AllocationMetrics.cpp  README.md  boolToString.cpp  ostream_vector.cpp  print_datetime_string.cpp  sortVector.cpp
projects/SNES_Gamepad_Display/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
projects/SNES_Gamepad_Display/src/: CMakeLists.txt  GamePad_SDL_CMake_Test.cpp  GamePad_SDL_CMake_Test.h
projects/pandemic/: main  third_sketch  third_sketch.cpp
vscode-settings-backup/: .clang-format  c_cpp_properties.json
(+548 files in other folders)
